<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BodyByScience</string>
    <string name="action_settings">Settings</string>
    <string name="big3">Big 3 Workout</string>
    <string name="chest_press">Chest Press</string>
    <string name="lat_pull_downs">Lat Pull-Downs</string>
    <string name="leg_press">Leg Press</string>
    <string name="seated_row">Seated Row</string>
    <string name="overhead_press">Overhead Press</string>
    <string name="summary">Summary</string>
    <string name="ok">OK</string>
    <string name="exercise_not_saved">Exercise NOT saved!, Weight must not be zero and/or time must not be zero.</string>
    <string name="exercise_saved">Exercise saved!</string>
    <string name="action_new_workout">New</string>
    <string name="new_workout">New Workout (previous workout is closed out)</string>
    <string name="number_sign">#</string>
    <string name="asc">" ASC"</string>
    <string name="date_format">MM/dd/yy</string>
    <string name="date_format_international">dd-MM-yy</string>
    <string name="weight_format">lbs</string>
    <string name="weight_format_metric">kg</string>
    <string name="seconds_total">" sec total"</string>
    <string name="desc">" DESC"</string>
    <string name="date_format_short">MM/dd</string>
    <string name="date_format_short_international">dd-MM</string>
    <string name="plus">+</string>
    <string name="enter_weight">enter weight</string>
    <string name="minus">-</string>
    <string name="start">start</string>
    <string name="reset">reset</string>
    <string name="settings">Settings</string>

</resources>
