<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/increase_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_weight"
            android:inputType="number"
            android:singleLine="true" />

        <Button
            android:id="@+id/decrease_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".5"
            android:text="@string/start" />

        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".5"
            android:text="@string/reset" />

    </LinearLayout>


    <include layout="@layout/chrono" />

    <Button
        android:id="@+id/log"
        android:layout_width="fill_parent"
        android:layout_height="100dp    "
        android:text="Log" />

</LinearLayout>